# ai-dev-agent

./: .cursor-rules  .cursor-rules.backup.universal  .cursor-rules.backup_original_24_rules  .cursor-session-active  .dockerignore  .gitignore  .pre-commit-config.yaml  .test_catalogue_state.json  AGENT_SUPERVISOR_ANALYSIS.md  CONTRIBUTING.md  CURSOR_RULES_ANALYSIS_DETAILED.md  CURSOR_RULES_CLEANUP_SUMMARY.md  CURSOR_RULES_FINAL_ASSESSMENT_REPORT.md  CURSOR_RULES_SYNTAX_ANALYSIS_REPORT.md  Dockerfile  FINAL_RULE_SYSTEM_VERIFICATION.md  IMPLEMENTATION_ROADMAP.md  LANGGRAPH_CONVERSION_PLAN.md  MCP_SERVER_INTEGRATION_CONCEPT.md  PROMPT_MANAGER_APP_FIX_SUMMARY.md  README.md  README_DOCKER.md  RULE_REORGANIZATION_COMPLETE.md  RULE_SYSTEM_OPTIMIZATION_COMPLETE.md  RULE_SYSTEM_VERIFICATION_COMPLETE.md  SUPERVISOR_SWARM_HYBRID_ARCHITECTURE.md  US-PE-01_COMPLETION_SUMMARY.md  US-PE-02_COMPLETION_SUMMARY.md  WORKING_TEST_DATA.md  ai-dev-agent.code-workspace  demo_agile_automation.py  demo_ide_trigger.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  epic_assignment_results.json  langgraph.json  langgraph_workflow_manager.py  main.py  prompt_manager_app.py  (+17 more)
.cursor/: README.md  automated_user_story_status_updates.mdc  startup.py  test_monitoring_rule.mdc
agents/: README.md  __init__.py  agent_factory.py  agent_manager.py  agile_controlled_subagent_orchestrator.py  architecture_designer.py  base_agent.py  code_generator.py  code_reviewer.py  contemporary_giants_acknowledgment_team.py  cursor_ide_integration_expert_team.py  database_cleanup_specialist_team.py  documentation_generator.py  enhanced_base_agent.py  ethical_ai_protection_team.py  formal_system_compliant_agent.py  foundation_practical_compliant_agent.py  layered_rule_enhanced_agent.py  project_manager.py  pydantic_experts.py  pydantic_migration_specialist_team.py  readme_excellence_team.py  requirements_analysis_agent.py  requirements_analyst.py  rule_system_core_architecture_team.py  security_analyst.py  self_optimizing_validation_agent.py  specialized_subagent_team.py  system_integration_excellence_team.py  test_generator.py  test_recovery_specialist_team.py  ui_testing_specialist_team.py  workflow_orchestration_team.py  workflow_orchestration_team_langgraph.py
apps/: README.md  __init__.py  advanced_prompt_engineering_ui.py  enhanced_mcp_testing.py  enhanced_streamlit_display.py  main.py  mcp_management_app.py  mcp_management_page.py  prompt_manager_app.py  rag_development_app.py  rag_management_app.py  streamlit_app.py  streamlit_app_vibe_original.py  temp_original_app.py  universal_composition_app.py  vibe_coding_app.py  vibe_coding_ui.py
context/: __init__.py  context_engine.py
demo/: agile_coordination_demo.py  ai_agent_demo_system.py  orchestral_language_games_demo.py  refined_agent_layered_rules_demo.py  technical_demo_system.py
docs/: CHANGELOG.md  CLEAR_SEPARATION_STRATEGY.md  COMPREHENSIVE_FUNDAMENTAL_WORK_DOCUMENTATION.md  CONTEMPORARY_GIANTS_ACKNOWLEDGMENT.md  CONTEXT_AWARE_AGENT_INTEGRATION.md  CURSOR_AUTO_STARTUP.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_TRANSFORMATION_SUMMARY.md  FOUNDATIONAL_PROJECT_VISION.md  LANGSMITH_PROMPT_TAGS_REFERENCE.md  MCP_TOOLS_CONFIG_STATUS.md  PROGRESS_SUMMARY_RAG_ARCHITECTURE.md  PROJECT_STRUCTURE_STRATEGY.md  RAG_PROMPTS_MIGRATION_SUMMARY.md  README.md  RULE_SYSTEM_TRANSFORMATION_SUMMARY.md  TECHNICAL_PROJECT_VISION.md  agent-graph.md  class-diagram.md  sequence-diagram.md  system-diagram.md
enforcement/: divine_lesson_principle.md  philosophical_software_techniques.md  semantic_cleanup_system.md  spiritual_backbone.md
examples/: context_aware_agent_integration.py  example_1_web_api_development.py  gem_1_smart_code_reviewer.py  gem_2_intelligent_test_generator.py
models/: README.md  __init__.py  config.py  responses.py  simplified_responses.py  state.py  supervisor_state.py  swarm_state.py
monitoring/: .test_catalogue_state.json  alerts.json  health_data.json  health_history.json  rule_performance_analytics.json  us-001-validation-results.json
prompt_backups/: backup_tracking.db
prompts/: README.md  __init__.py  agent_prompt_loader.py  prompt_templates_backup.db  prompt_templates_clean.db
reports/: test_report_20251009_125712.html  test_report_20251010_112340.html  test_report_20251010_112726.html  (+1 more)
tests/: __init__.py  (+24 more)
(+1720 files in other folders)
